--- a/src/sndpeek/makefile.win32
+++ b/src/sndpeek/makefile.win32
@@ -1,9 +1,11 @@
 CC=gcc
 CPP=g++
-INCLUDES=-I../marsyas/ -I/usr/include/directx/
+INCLUDES=-I../marsyas/ -I/usr/include/directx/ -I../../vendor/freeglut
 MARSYAS_DIR=../marsyas/
 CFLAGS=-D__WINDOWS_DS__ -D__WINDOWS_PTHREAD__ -D__LITTLE_ENDIAN__ $(INCLUDES) -O3 -c
-LIBS=-ldsound -ldxguid -lwinmm -lpthread -lopengl32 -lglu32 -lglut32
+LIBS=-ldsound -ldxguid -lwinmm -lpthread -lopengl32 -lglu32 -lglut32 -Wl,-rpath=../../vendor/freeglut
+
+
 
 TARGET=sndpeek
 OBJS=chuck_fft.o RtAudio.o Thread.o sndpeek.o Stk.o util_sndfile.o \
@@ -70,5 +72,5 @@ fmatrix.o:
 .cpp.o: $*.h $*.cpp
 	$(CC) $(CFLAGS) $*.cpp
 
-clean: 
+clean:
 	rm -f sndpeek.exe *~ *.o
