--- a/src/sndpeek/makefile.win32
+++ b/src/sndpeek/makefile.win32
@@ -3,7 +3,7 @@ CPP=g++
 INCLUDES=-I../marsyas/ -I/usr/include/directx/ -I../../vendor/freeglut
 MARSYAS_DIR=../marsyas/
 CFLAGS=-D__WINDOWS_DS__ -D__WINDOWS_PTHREAD__ -D__LITTLE_ENDIAN__ $(INCLUDES) -O3 -c
-LIBS=-ldsound -ldxguid -lwinmm -lpthread -lopengl32 -lglu32 -lglut32 -Wl,-rpath=../../vendor/freeglut
+LIBS=-ldsound -ldxguid -lwinmm -lpthread -lopengl32 -lglu32 -lfreeglut_static -Wl,-rpath=../../vendor/freeglut
 
 
 
