--- a/src/sndpeek/makefile.win32
+++ b/src/sndpeek/makefile.win32
@@ -2,8 +2,8 @@ CC=gcc
 CPP=g++
 INCLUDES=-I../marsyas/ -I/usr/include/directx/ -I../../vendor/freeglut
 MARSYAS_DIR=../marsyas/
-CFLAGS=-D__WINDOWS_DS__ -D__WINDOWS_PTHREAD__ -D FREEGLUT_STATIC -D__LITTLE_ENDIAN__ $(INCLUDES) -O3 -c
-LIBS=-ldsound -ldxguid -lwinmm -lpthread -lopengl32 -lglu32 -lfreeglut_static -L"../../vendor/freeglut" -lwinmm -lgdi32 -Wl,--subsystem,windows
+CFLAGS=-D__WINDOWS_DS__ -D__WINDOWS_PTHREAD__ -D FREEGLUT_STATIC -D__LITTLE_ENDIAN__ $(INCLUDES) -m32 -O3 -c
+LIBS=-ldsound -ldxguid -lwinmm -lpthread -lopengl32 -lglu32 -lfreeglut_static -L"../../vendor/freeglut" -lwinmm -lgdi32 -lole32 -Wl,--subsystem,windows
 
 TARGET=sndpeek
 OBJS=chuck_fft.o RtAudio.o Thread.o sndpeek.o Stk.o util_sndfile.o \
