--- a/src/sndpeek/makefile.win32
+++ b/src/sndpeek/makefile.win32
@@ -1,5 +1,5 @@
-CC=i686-w64-mingw32-gcc-8.1.0.exe
-CPP=i686-w64-mingw32-gcc-8.1.0.exe
+CC=gcc
+CPP=g++
 INCLUDES=-I../marsyas/ -I/usr/include/directx/ -I../../vendor/freeglut
 MARSYAS_DIR=../marsyas/
 CFLAGS=-D__WINDOWS_DS__ -D__WINDOWS_PTHREAD__ -D FREEGLUT_STATIC -D__LITTLE_ENDIAN__ $(INCLUDES) -O3 -c
