--- a/src/sndpeek/makefile.win32
+++ b/src/sndpeek/makefile.win32
@@ -2,7 +2,7 @@ CC=gcc
 CPP=g++
 INCLUDES=-I../marsyas/ -I/usr/include/directx/ -I../../vendor/freeglut
 MARSYAS_DIR=../marsyas/
-CFLAGS=-D__WINDOWS_DS__ -D__WINDOWS_PTHREAD__ -D FREEGLUT_STATIC -D__LITTLE_ENDIAN__ $(INCLUDES) -O3 -c
+CFLAGS=-D__WINDOWS_DS__ -D__PLATFORM_WIN32__ -D FREEGLUT_STATIC -D__LITTLE_ENDIAN__ $(INCLUDES) -m32	 -O3 -c
 LIBS=-ldsound -ldxguid -lwinmm -lpthread -lopengl32 -lglu32 -lfreeglut_static -L"../../vendor/freeglut" -lwinmm -lgdi32 -lole32 -Wl,--subsystem,windows
 
 TARGET=sndpeek
